# quickxml_to_serde

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: basic.rs  json_types.rs
src/: lib.rs  tests.rs
test_xml_files/: def_namespace.json  def_namespace.xml  mixed_text_nodes.json  mixed_text_nodes.xml  numerical.json  numerical.xml  xsd.json
