[package]
name = "quickxml_to_serde"
version = "0.3.1"
authors = ["Alec Troemel <alec@mirusresearch.com>"]
description = "Convert between XML JSON using quickxml and serde"
repository = "https://github.com/AlecTroemel/quickxml_to_serde"
keywords = ["json", "xml", "xml2json"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
minidom = "0.12"
