[package]
name = "quickxml_to_serde"
version = "0.6.1"
authors = ["Alec Troemel <alec@mirusresearch.com>", "Max Voskob <max@onebro.me>"]
description = "Convert between XML JSON using quickxml and serde"
repository = "https://github.com/AlecTroemel/quickxml_to_serde"
keywords = ["json", "xml", "xml2json", "xml_to_json"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
minidom = "0.15"
regex = "1.10.4"

[features]
json_types = [] # Enable to enforce fixed JSON data types for certain XML nodes
regex_path = ["json_types"] # Enable Regex matching for JSON types
